# pad-analytics

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  README_final.md  README_final_v2.md  README_new.md  SDK_ROADMAP.md  package_strategy.md  pypi_checklist.md  pyproject.toml  req.txt  requirements.txt  requirements_pip.txt  run_tests.py  setup.py  test_installation.py  test_predict.py  test_predict_minimal.py  test_predict_package.py  test_simple.py  test_venv.py
.github/workflows/: ci.yml
data/: 10_region_rgb__test.csv
examples/: README.md  basic_usage.py  batch_predictions.py  custom_analysis.py  dataset_features_demo.py
notebooks/: 01_python_basics_and_introduction_to_pandas.ipynb  02_google_colab_initial_setup.ipynb  03_pad_functions.ipynb  24fhiPLS1quantity.csv  eval_PLS_2_apagar.ipynb  eval_nn_api.ipynb  labels.txt  pad_api_analysis_notebook copy.ipynb  pad_api_analysis_notebook.ipynb  using_padml_package.ipynb
refs/: google_drive_colab_guide.md
src/: __init__.py  pad_analysis.py  pad_api_analysis_notebook.ipynb  pad_functions.py  pad_helper.py  padanalytics.py  pixelProcessing.py  regionRoutine.py
src/pad_analytics/: __init__.py  dataset_manager.py  padanalytics.py
tests/: __init__.py  conftest.py  test_imports.py  test_padanalytics.py
