[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pad-analytics"
version = "0.1.0"
description = "Python tools for analyzing Paper Analytical Devices (PADs) to detect and quantify pharmaceutical compounds through colorimetric analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Paper Analytical Device Project Team", email = "pad-project@nd.edu"},
]
keywords = ["paper analytical device", "PAD", "colorimetric analysis", "pharmaceutical quality", "drug detection", "machine learning", "diagnostics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "tensorflow>=2.13.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0,<2.0.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "requests>=2.25.0",
    "pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "ipywidgets>=7.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
pad-analytics = "pad_analytics.padanalytics:main"

[project.urls]
Homepage = "https://padproject.nd.edu"
Documentation = "https://pad.crc.nd.edu/docs"
Repository = "https://github.com/PaperAnalyticalDeviceND/pad-ml-workflow-v2"
Issues = "https://github.com/PaperAnalyticalDeviceND/pad-ml-workflow-v2/issues"
"Source Code" = "https://github.com/PaperAnalyticalDeviceND/pad-ml-workflow-v2"

[tool.setuptools]
packages = ["pad_analytics"]
package-dir = {"pad_analytics" = "src"}

[tool.setuptools.package-data]
pad_analytics = ["*.csv", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]